fix dark mode delay issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: bg-blue-dark;
-    --foreground: #ffffff;
-  }
-}
-
 body {
-  color: var(--foreground);
-  background-color: var(--background);
+  @apply bg-white text-blue-dark dark:bg-blue-dark dark:text-white transition-all duration-300;
   font-family: Arial, Helvetica, sans-serif;
 }
 
